# serializer version: 1
# name: test_application_info
  dict({
    'version': <AwesomeVersion SemVer '1.9.4'>,
  })
# ---
# name: test_application_info.1
  dict({
    'version': '1.9.4',
  })
# ---
# name: test_probe_success[audio and video-probe_success.json][deserialized]
  dict({
    'producers': list([
      dict({
        'media': list([
          'video, recvonly, H264',
          'audio, recvonly, MPEG4-GENERIC/16000',
          'audio, sendonly, PCMU/8000',
        ]),
        'url': 'rtsp://x:x@192.168.x.x:554/Preview_01_sub',
      }),
    ]),
  })
# ---
# name: test_probe_success[audio and video-probe_success.json][serialized]
  '{"producers":[{"url":"rtsp://x:x@192.168.x.x:554/Preview_01_sub","medias":["video, recvonly, H264","audio, recvonly, MPEG4-GENERIC/16000","audio, sendonly, PCMU/8000"]}]}'
# ---
# name: test_probe_success[audio and video-probe_without_medias.json][deserialized]
  dict({
    'producers': list([
      dict({
        'media': list([
        ]),
        'url': 'rtsp://x:x@192.168.x.x:554/Preview_01_sub',
      }),
    ]),
  })
# ---
# name: test_probe_success[audio and video-probe_without_medias.json][serialized]
  '{"producers":[{"url":"rtsp://x:x@192.168.x.x:554/Preview_01_sub","medias":[]}]}'
# ---
# name: test_probe_success[audio only-probe_success.json][deserialized]
  dict({
    'producers': list([
      dict({
        'media': list([
          'video, recvonly, H264',
          'audio, recvonly, MPEG4-GENERIC/16000',
          'audio, sendonly, PCMU/8000',
        ]),
        'url': 'rtsp://x:x@192.168.x.x:554/Preview_01_sub',
      }),
    ]),
  })
# ---
# name: test_probe_success[audio only-probe_success.json][serialized]
  '{"producers":[{"url":"rtsp://x:x@192.168.x.x:554/Preview_01_sub","medias":["video, recvonly, H264","audio, recvonly, MPEG4-GENERIC/16000","audio, sendonly, PCMU/8000"]}]}'
# ---
# name: test_probe_success[audio only-probe_without_medias.json][deserialized]
  dict({
    'producers': list([
      dict({
        'media': list([
        ]),
        'url': 'rtsp://x:x@192.168.x.x:554/Preview_01_sub',
      }),
    ]),
  })
# ---
# name: test_probe_success[audio only-probe_without_medias.json][serialized]
  '{"producers":[{"url":"rtsp://x:x@192.168.x.x:554/Preview_01_sub","medias":[]}]}'
# ---
# name: test_probe_success[video only-probe_success.json][deserialized]
  dict({
    'producers': list([
      dict({
        'media': list([
          'video, recvonly, H264',
          'audio, recvonly, MPEG4-GENERIC/16000',
          'audio, sendonly, PCMU/8000',
        ]),
        'url': 'rtsp://x:x@192.168.x.x:554/Preview_01_sub',
      }),
    ]),
  })
# ---
# name: test_probe_success[video only-probe_success.json][serialized]
  '{"producers":[{"url":"rtsp://x:x@192.168.x.x:554/Preview_01_sub","medias":["video, recvonly, H264","audio, recvonly, MPEG4-GENERIC/16000","audio, sendonly, PCMU/8000"]}]}'
# ---
# name: test_probe_success[video only-probe_without_medias.json][deserialized]
  dict({
    'producers': list([
      dict({
        'media': list([
        ]),
        'url': 'rtsp://x:x@192.168.x.x:554/Preview_01_sub',
      }),
    ]),
  })
# ---
# name: test_probe_success[video only-probe_without_medias.json][serialized]
  '{"producers":[{"url":"rtsp://x:x@192.168.x.x:554/Preview_01_sub","medias":[]}]}'
# ---
# name: test_streams_get[empty]
  dict({
  })
# ---
# name: test_streams_get[one stream only url]
  dict({
    'camera.12mp_fluent': dict({
      'producers': list([
        dict({
          'media': list([
          ]),
          'url': 'rtsp://test:test@192.168.10.105:554/Preview_06_sub',
        }),
      ]),
    }),
  })
# ---
# name: test_streams_get[one stream]
  dict({
    'camera.12mp_fluent': dict({
      'producers': list([
        dict({
          'media': list([
            'video, recvonly, H264',
            'audio, recvonly, MPEG4-GENERIC/16000',
          ]),
          'url': 'rtsp://test:test@192.168.10.105:554/Preview_06_sub',
        }),
      ]),
    }),
  })
# ---
# name: test_streams_get[without producers]
  dict({
    'camera.12mp_fluent': dict({
      'producers': list([
      ]),
    }),
  })
# ---
# name: test_webrtc_offer
  dict({
    'sdp': 'v=0...',
    'type': 'answer',
  })
# ---
